# singlestore-auth-iam

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASING.md
.github/: cloud-test-hosts.json  copilot-instructions.md
.github/workflows/: api-docs-pages.yml  aws_positive.yml  cloud_clear_stale_locks.yml  cloud_provider.yml  codecov.yml  codeql-analysis.yml  go.yml  golangci-lint.yml  java.yml  lint.yml  publish-maven.yml  publish-pypi.yml  python.yml
docs/: coverage-strategy.md
docs/api/: AUTHENTICATION.md  README.md  api.html  api.md  index.html  openapi.yaml
go/: README.md  go.mod  go.sum
go/cmd/: README.md  integration_test.go
go/cmd/s2iam/: main.go  main_test.go
go/cmd/s2iam_test_server/: README.md  main.go  main_test.go
go/internal/testhelp/: testhelp.go
go/s2iam/: api.go  aws.go  azure.go  fastpath_test.go  gcp.go  https.go  https_test.go  jwt.go  s2iam.go  s2iam_test.go
go/s2iam/aws/: client.go  client_test.go  verifier.go  verifier_test.go
go/s2iam/azure/: client.go  client_test.go  jwks.go  verifier.go  verifier_test.go
go/s2iam/gates/: gates.go
go/s2iam/gcp/: client.go  client_test.go  verifier.go  verifier_test.go
go/s2iam/models/: client.go  verifier.go
go/s2iam/s2verifier/: verifier.go
go/s2iam/verifier/: api.go  aws.go  azure.go  gcp.go  verifier.go
java/: .eclipse-java-formatter.xml  README.md  pom.xml
java/src/main/java/com/singlestore/s2iam/: CloudIdentity.java  CloudProviderClient.java  CloudProviderType.java  Logger.java  ProviderContext.java  S2IAM.java  S2IAMRequest.java  Timeouts.java
java/src/main/java/com/singlestore/s2iam/exceptions/: IdentityUnavailableException.java  NoCloudProviderDetectedException.java  S2IAMException.java
java/src/main/java/com/singlestore/s2iam/options/: JwtOption.java  JwtOptions.java  Options.java  ProviderOption.java  ProviderOptions.java  ServerUrlOption.java  WithProviders.java
java/src/main/java/com/singlestore/s2iam/providers/: AWSClient.java  AbstractBaseClient.java  AzureClient.java  GCPClient.java
java/src/main/java/com/singlestore/s2iam/providers/aws/: AWSClient.java
java/src/main/java/com/singlestore/s2iam/providers/azure/: AzureClient.java
java/src/test/java/com/singlestore/s2iam/: FastPathDetectionTest.java  GoTestServer.java  LocalMockProvider.java  S2IAMAssumeRoleTest.java  S2IAMCloudProviderNoRoleTest.java  S2IAMDetectionTest.java  S2IAMHttpsTest.java  S2IAMIdentityShapeTest.java  S2IAMJwtAssumeRoleInvalidTest.java  S2IAMJwtAssumeRoleParityTest.java  S2IAMJwtAssumeRoleTest.java  S2IAMJwtErrorCasesTest.java  S2IAMJwtHappyPathTest.java  S2IAMRequestBuilderTest.java  TestSkipUtil.java
python/: .flake8  README.md  example.py  pyproject.toml  test_integration.sh  test_local.sh
python/src/s2iam/: __init__.py  api.py  https.py  jwt.py  models.py
python/src/s2iam/aws/: __init__.py
python/src/s2iam/azure/: __init__.py
python/src/s2iam/gcp/: __init__.py
python/tests/: __init__.py  conftest.py  run_cloud_validation.sh  test_aws_assume_role_session_name.py  test_aws_irsa_detection.py  test_cloud_validation.py  test_fastpath.py  test_https.py  test_integration.py  test_jwt.py  test_jwt_assume_role_and_errors.py  test_jwt_parity.py  test_models.py  test_production_server.py  test_server_utils.py  test_utils.py  testhelp.py
scripts/: check-versions.sh
(+3 files in other folders)
